# retree

./: CHANGELOG.md  Cargo.toml  LICENSE  README.en.md  README.md  README.ru.md  check.sh  deny.toml  prepare-release.sh  rust-analyzer.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml
benches/: bench_memory.ps1  bench_xlarge.ps1  retree_perf.rs  retree_perf_xlarge.rs  rtree_perf.rs  rtree_perf_xlarge.rs
benches/common/: mod.rs
docs/: README.md  cli-reference.md  colors.md  configuration.md  development.md  icons.md  performance.md  troubleshooting.md  windows.md
docs/en/: cli-reference.md  colors.md  configuration.md  development.md  icons.md  performance.md  troubleshooting.md  unsafe-coverage.md  windows.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/app/: context.rs  mod.rs  run.rs
src/cli/: args.rs  early_lang.rs  localized.rs  mod.rs
src/config/: env.rs  mod.rs  options.rs
src/core/: entry.rs  mod.rs  tree.rs
src/filter/: mod.rs  pattern.rs
src/format/: html.rs  json.rs  mod.rs  text.rs  xml.rs
src/i18n/: i18n_tests.rs  messages.rs  mod.rs
src/platform/: mod.rs  reserved.rs  unix.rs
src/render/: context.rs  helpers.rs  html.rs  json.rs  mod.rs  text.rs  traits.rs  xml.rs
src/sorter/: mod.rs  natural.rs
src/style/: colors.rs  icons.rs  mod.rs
src/walker/: mod.rs  (+3 more)
tests/: basic.rs  cli_integration.rs  display.rs  errors.rs  filtering.rs  golden.rs  i18n.rs  max_entries.rs  output_format.rs  parallel.rs  security.rs  sorting.rs  streaming_text.rs  streams.rs  tree_compat.rs  windows_unsafe.rs
(+28 files in other folders)
