[package]
name = "rtree"
version = "0.1.4"
edition = "2021"
rust-version = "1.75"
description = "GNU tree compatible directory listing for Windows"
license = "MIT"
repository = "https://github.com/M4dPac/rtree"
keywords = ["tree", "directory", "cli", "windows"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "unicode", "string"] }
unicode-width = "0.2"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
quick-xml = { version = "0.39", features = ["serialize"] }
once_cell = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = [
  "std",
  "clock",
] }
rustc-hash = "2"
num_cpus = "1"
rayon = "1"

[target.'cfg(unix)'.dependencies]
uzers = "0.12"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_IO",
  "Win32_System_Ioctl",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_System_SystemServices",
] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
criterion = "0.8"
serde_json = "1"

[features]
tree_compat = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bench]]
name = "rtree_perf"
harness = false
